# ros2_pcl_ws

./: .envrc  .gitattributes  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HOWTO_IMPORT.md  LICENSE.md  README.md  SECURITY.md  mkdocs.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml
docs/: BUILD.md  CI.md  ENVIRONMENT.md  GITHUB.md  INSTALL.md  OVERVIEW.md  TROUBLESHOOTING.md  USAGE.md
install/: local_setup.sh  setup.sh
install/pointcloud_play/lib/pointcloud_play/: pass_through  pc_pub.py
install/pointcloud_play/share/pointcloud_play/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pointcloud_play/share/pointcloud_play/cmake/: pointcloud_playConfig-version.cmake  pointcloud_playConfig.cmake
install/pointcloud_play/share/pointcloud_play/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
ros2_pcl_ws_pack/: CODE_OF_CONDUCT.md  LICENSE  QUALITY_DECLARATION.md  SECURITY.md
ros2_pcl_ws_pack/.github/: pull_request_template.md
ros2_pcl_ws_pack/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
ros2_pcl_ws_pack/.github/workflows/: ci.yaml  docs.yml
src/pointcloud_play/: CMakeLists.txt  CmakeLists.txt  package.xml
src/pointcloud_play/launch/: demo.launch.py
src/pointcloud_play/rviz/: points_demo.rviz
src/pointcloud_play/scripts/: pc_pub.py
src/pointcloud_play/src/: pass_through.cpp
(+4 files in other folders)
